# MyGuiUtils

./: .clangd  .gitignore  CMakeLists.txt
cmake-vscode-build-GCC/: .ninja_deps  .ninja_log  build.ninja
cmake-vscode-build-GCC/.cmake/api/v1/reply/: cache-v2-6c7ea75fbd3cf89fd81a.json  cmakeFiles-v1-3a2133fb3f2271240b9e.json  codemodel-v2-0ddd1d03baca0129cf81.json  directory-_deps.boost-build-Debug-bba37bca163f9420efe1.json  directory-_deps.boost-build.libs.algorithm-Debug-de1dd15f87a11e4a19ca.json  directory-_deps.boost-build.libs.align-Debug-899b2a04f33b2aa57dba.json  directory-_deps.boost-build.libs.array-Debug-1837c0b0b1dd849000cc.json  directory-_deps.boost-build.libs.asio-Debug-d0510e371aea7066b5df.json  directory-_deps.boost-build.libs.assert-Debug-246fab4f6a07e9445726.json  directory-_deps.boost-build.libs.beast-Debug-0f0fc80a36ba09e647a0.json  directory-_deps.boost-build.libs.bind-Debug-a24d62a9f1897ef7064d.json  directory-_deps.boost-build.libs.chrono-Debug-cf8d22997db112498a79.json  directory-_deps.boost-build.libs.concept_check-Debug-1db4d64e7abbdf6c4926.json  directory-_deps.boost-build.libs.config-Debug-251201d5a2c0c517a1c6.json  directory-_deps.boost-build.libs.container-Debug-4922ccbd047888737ae2.json  directory-_deps.boost-build.libs.container_hash-Debug-3d25871db04562a9ab33.json  directory-_deps.boost-build.libs.context-Debug-e61bab53eb34f2e73c23.json  directory-_deps.boost-build.libs.conversion-Debug-6988c215ac1a1178374f.json  directory-_deps.boost-build.libs.core-Debug-6481b4f6fb96a37ff1cd.json  directory-_deps.boost-build.libs.coroutine-Debug-153fcc1bcc8b5cf04acf.json  directory-_deps.boost-build.libs.date_time-Debug-b0b05b544ad9ceac3c48.json  directory-_deps.boost-build.libs.describe-Debug-91a0ab47baa7e8bff425.json  directory-_deps.boost-build.libs.detail-Debug-7b77a3fe946f547b39bd.json  directory-_deps.boost-build.libs.endian-Debug-9408afb78626a5412830.json  directory-_deps.boost-build.libs.exception-Debug-6bd6e173ce21cb5264a6.json  directory-_deps.boost-build.libs.function-Debug-0fb3214fa851eaf7ed2c.json  directory-_deps.boost-build.libs.function_types-Debug-92692ca7494ae5d10892.json  directory-_deps.boost-build.libs.functional-Debug-04810636d5fcefdb81f4.json  directory-_deps.boost-build.libs.fusion-Debug-9db699411bb4663d8020.json  directory-_deps.boost-build.libs.headers-Debug-7b3ba61d4ea81b00f316.json  directory-_deps.boost-build.libs.integer-Debug-943083f6312cc94903ac.json  directory-_deps.boost-build.libs.intrusive-Debug-4291250ea873ad084f93.json  directory-_deps.boost-build.libs.io-Debug-5e8c5b3ddcabfad35e95.json  directory-_deps.boost-build.libs.iterator-Debug-5f19efe06bc30bf84cac.json  directory-_deps.boost-build.libs.lexical_cast-Debug-768cb12358e1c72331c4.json  directory-_deps.boost-build.libs.logic-Debug-dfee1851ca006afa1f75.json  directory-_deps.boost-build.libs.move-Debug-7c62825b848680499374.json  (+46 more)
example/: CMakeLists.txt  input_text2window.cpp  test_window_id.cpp
include/MyGuiUtils/: common.hpp
src/: CMakeLists.txt
