project(example)
file(GLOB example_srcs *.cpp)
foreach(src ${example_srcs})
    get_filename_component(src_file_name ${src} NAME_WLE)
    set(project_name example_${src_file_name})
    message("-------- add example: ${project_name} ")
    add_executable(${project_name} ${src})
    target_link_libraries(${project_name} PRIVATE lib::gui_utils fmt::fmt)
endforeach()